force-app/main/default/objects/Donation_Amount__mdt/Donation_Amount__mdt.object-meta.xml
<CustomObject>
    <label>Donation Amount</label>
    <pluralLabel>Donation Amounts</pluralLabel>
</CustomObject>