force-app/main/default/objects/Donation_Amount__mdt/fields/Auto_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Calculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Calculate</label>
    <type>Checkbox</type>
</CustomField>