force-app/main/default/objects/Donation_Amount__mdt/fields/Giving_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Giving_Amount_3__c</fullName>
    <label>Giving Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>