force-app/main/default/objects/Donation_Amount__mdt/fields/Percentage_to_Auto_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Percentage_to_Auto_Calculate__c</fullName>
    <label>Percentage to Auto Calculate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>