force-app/main/default/objects/Donation_Amount__mdt/fields/Starting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Starting_Amount__c</fullName>
    <label>Starting Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>